# mcap2arrow-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml  release.yml
mcap2arrow/mcap2arrow/: Cargo.toml  README.md  release.toml
mcap2arrow/mcap2arrow-arrow/: Cargo.toml  README.md
mcap2arrow/mcap2arrow-arrow/src/: error.rs  flatten.rs  lib.rs  projection.rs  schema_convert.rs
mcap2arrow/mcap2arrow-arrow/src/arrow_convert/: append.rs  builder.rs  mod.rs  scalar.rs
mcap2arrow/mcap2arrow-arrow/tests/: arrow_convert_test.rs  flatten_test.rs  projection_test.rs  schema_convert_test.rs
mcap2arrow/mcap2arrow-core/: Cargo.toml  README.md
mcap2arrow/mcap2arrow-core/scripts/: README.md  pyproject.toml
mcap2arrow/mcap2arrow-core/src/: decoder.rs  error.rs  lib.rs  message.rs  reader.rs  schema.rs  schema_encoding.rs  value.rs
mcap2arrow/mcap2arrow-core/src/schema/: format.rs  types.rs
mcap2arrow/mcap2arrow-core/tests/: encodings.rs  reader.rs  schema_format.rs  value_schema.rs
mcap2arrow/mcap2arrow-core/tests/fixtures/: with_summary.mcap
mcap2arrow/mcap2arrow-protobuf/: Cargo.toml  README.md
mcap2arrow/mcap2arrow-protobuf/src/: lib.rs  policy.rs  proto_to_arrow.rs  schema.rs
mcap2arrow/mcap2arrow-protobuf/tests/: decode.rs  schema.rs  test_helpers.rs
mcap2arrow/mcap2arrow-ros2-common/: Cargo.toml  README.md
mcap2arrow/mcap2arrow-ros2-common/src/: ast.rs  cdr.rs  lib.rs  schema.rs  topic_decoder.rs  type_resolver.rs
mcap2arrow/mcap2arrow-ros2-common/tests/: cdr_decode.rs
mcap2arrow/mcap2arrow-ros2idl/: Cargo.toml  README.md
mcap2arrow/mcap2arrow-ros2idl/src/: lex.rs  lib.rs  parser.rs  resolver.rs  schema_bundle.rs
mcap2arrow/mcap2arrow-ros2idl/tests/: schema.rs
mcap2arrow/mcap2arrow-ros2msg/: Cargo.toml  README.md
mcap2arrow/mcap2arrow-ros2msg/src/: lib.rs  parser.rs
mcap2arrow/mcap2arrow-ros2msg/tests/: parser.rs
mcap2arrow/mcap2arrow/src/: error.rs  lib.rs  reader.rs
mcap2arrow/mcap2arrow/tests/: reader.rs  reader_additional.rs
mcap2arrow/mcap2arrow/tests/fixtures/: README.md  no_summary.mcap
mcapdecode/mcapdecode/: Cargo.toml  README.md  release.toml
mcapdecode/mcapdecode-arrow/: Cargo.toml  README.md
mcapdecode/mcapdecode-arrow/src/: error.rs  lib.rs  schema_convert.rs
mcapdecode/mcapdecode-arrow/src/arrow_convert/: append.rs  builder.rs  mod.rs  scalar.rs
mcapdecode/mcapdecode-arrow/tests/: arrow_convert_test.rs  flatten_test.rs  projection_test.rs  schema_convert_test.rs
mcapdecode/mcapdecode-core/: Cargo.toml  README.md
mcapdecode/mcapdecode-core/src/: decoder.rs  error.rs  lib.rs  message.rs  message_encoding.rs
mcapdecode/mcapdecode-core/src/schema/: format.rs  mod.rs
mcapdecode/mcapdecode-core/tests/: encodings.rs  schema_format.rs  value_schema.rs
mcapdecode/mcapdecode-protobuf/: Cargo.toml  README.md
mcapdecode/mcapdecode-protobuf/src/: lib.rs  proto_to_arrow.rs  schema.rs
mcapdecode/mcapdecode-protobuf/tests/: decode.rs  schema.rs
mcapdecode/mcapdecode-ros2-common/: Cargo.toml  README.md
mcapdecode/mcapdecode-ros2-common/src/: cdr.rs  error.rs  lib.rs  schema.rs  topic_decoder.rs  type_resolver.rs
mcapdecode/mcapdecode-ros2-common/tests/: cdr_decode.rs
mcapdecode/mcapdecode-ros2idl/: Cargo.toml  README.md
mcapdecode/mcapdecode-ros2idl/src/: lib.rs  parser.rs  resolver.rs  schema_bundle.rs
mcapdecode/mcapdecode-ros2idl/tests/: schema.rs
mcapdecode/mcapdecode-ros2msg/: Cargo.toml  README.md
mcapdecode/mcapdecode-ros2msg/src/: lib.rs  parser.rs
mcapdecode/mcapdecode-ros2msg/tests/: parser.rs
mcapdecode/mcapdecode/scripts/: gen_fixtures.py  gen_ros2msg_fixture.py
mcapdecode/mcapdecode/src/: arrow_ext.rs  error.rs  lib.rs  reader.rs
mcapdecode/mcapdecode/tests/: reader.rs
tools/mcaptui/src/: runtime.rs  ui.rs
tools/transmcap/: Cargo.toml  README.md
tools/transmcap/src/: format.rs  main.rs  writer.rs
tools/transmcap/src/commands/: convert.rs  schema.rs
