[package]
name = "mcap2arrow-arrow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true
description = "Arrow conversion utilities built on top of mcap2arrow-core schemas and values."

[dependencies]
mcap2arrow-core.workspace = true
arrow.workspace = true
thiserror.workspace = true
