[package]
name = "mcap2arrow-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true
description = "Core schema and value types for decoding MCAP payloads into structured data."

[dependencies]
thiserror.workspace = true
