[package]
name = "mcap2arrow-protobuf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true
description = "Protobuf decoder for mcap2arrow using FileDescriptorSet schemas."

[dependencies]
mcap2arrow-core.workspace = true
prost-reflect = "0.16.3"
prost-types = "0.14.3"
thiserror.workspace = true

[dev-dependencies]
bytes = "1"
prost = "0.14.3"
