[package]
name = "mcap2arrow-ros2-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true
description = "Shared ROS 2 type system and CDR decoding helpers for mcap2arrow."

[dependencies]
mcap2arrow-core.workspace = true
thiserror.workspace = true
bytes = "1.11.1"
