[package]
name = "mcap2arrow-ros2idl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true
readme = "README.md"
description = "ROS 2 IDL schema decoder for mcap2arrow CDR payloads."

[dependencies]
mcap2arrow-core.workspace = true
mcap2arrow-ros2-common.workspace = true
thiserror.workspace = true
nom = "7.1.3"
