[package]
name = "mcap2arrow-ros2msg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true
description = "ROS 2 .msg schema decoder for mcap2arrow CDR payloads."

[dependencies]
mcap2arrow-core.workspace = true
mcap2arrow-ros2-common.workspace = true
re_ros_msg = "0.29.2"
thiserror.workspace = true
