[package]
name = "mcap2arrow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true
description = "MCAP to Arrow conversion library with protobuf and ROS 2 decoders."
readme = "README.md"

[dependencies]
mcap2arrow-arrow.workspace = true
mcap2arrow-core.workspace = true
arrow = { workspace = true, features = ["prettyprint"] }
mcap.workspace = true
memmap2.workspace = true
thiserror.workspace = true

mcap2arrow-protobuf = { workspace = true, optional = true }
mcap2arrow-ros2idl = { workspace = true, optional = true }
mcap2arrow-ros2msg = { workspace = true, optional = true }

[features]
default = ["protobuf", "ros2idl", "ros2msg"]
protobuf = ["dep:mcap2arrow-protobuf"]
ros2idl = ["dep:mcap2arrow-ros2idl"]
ros2msg = ["dep:mcap2arrow-ros2msg"]
