[package]
name = "transmcap"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true

[[bin]]
name = "transmcap"
path = "src/main.rs"

[dependencies]
mcap2arrow.workspace = true

anyhow = "1.0.102"
arrow = { workspace = true, features = ["prettyprint", "csv", "json"] }
clap = { version = "4.5.58", features = ["derive"] }
indicatif = "0.18.4"
parquet = "57.3.0"
