[package]
name = "transmcap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true
description = "CLI for converting MCAP messages into JSONL, CSV, and Parquet via Arrow."
readme = "README.md"

[[bin]]
name = "transmcap"
path = "src/main.rs"

[dependencies]
mcap2arrow.workspace = true

anyhow = "1.0.102"
arrow = { workspace = true, features = ["prettyprint", "csv", "json"] }
clap = { version = "4.5.58", features = ["derive"] }
indicatif = "0.18.4"
parquet = "57.3.0"
